# agents

bank_agent/: README.md  pyproject.toml
bank_agent/src/bank_agent/: crew.py  main.py
mybankagent/: README.md  db_cli.py  pyproject.toml
mybankagent/knowledge/: knowladge.txt
mybankagent/src/mybankagent/: crew.py  main.py  rag_demo.py
mybankagent/src/mybankagent/config/: agents.yaml  tasks.yaml
mybankagent/src/mybankagent/tools/: db_manager.py  rag_tool.py
mycdagent/: pyproject.toml
mycdagent/src/mycdagent/: crew.py  main.py
mycdagent/src/mycdagent/config/: agents.yaml  tasks.yaml
mydcagent-/: demo_rag.py  pyproject.toml
mydcagent-/knowledge/: dcinfo.txt
mydcagent-/src/mydcagent/: crew.py  main.py
mydcagent-/src/mydcagent/config/: agents.yaml  tasks.yaml
mydcagent-/src/mydcagent/tools/: rag_tool.py
