[project]
name = "mycdagent"
version = "0.1.0"
description = "mycdagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
mycdagent = "mycdagent.main:run"
run_crew = "mycdagent.main:run"
train = "mycdagent.main:train"
replay = "mycdagent.main:replay"
test = "mycdagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
